--- a/index.html
+++ b/index.html
@@ -54,4 +54,60 @@
     <a href="notes/biology.pdf" class="note-link">Biology Notes</a>
   </main>
 </body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ansh Bro Notes</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f5f5;
+      color: #333;
+    }
+    header {
+      background: #4CAF50;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+    }
+    h1 {
+      margin: 0;
+    }
+    main {
+      padding: 20px;
+    }
+    .note-link {
+      display: block;
+      background: #fff;
+      margin: 10px 0;
+      padding: 15px;
+      text-decoration: none;
+      color: #4CAF50;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .note-link:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Ansh Bro Notes</h1>
+    <p>Class 9 Science Notes</p>
+  </header>
+  <main>
+    <h2>Download Notes</h2>
+    <a href="notes/physics.pdf" class="note-link">Physics Notes</a>
+    <a href="notes/chemistry.pdf" class="note-link">Chemistry Notes</a>
+    <a href="notes/biology.pdf" class="note-link">Biology Notes</a>
+  </main>
+</body>
 </html>
