--- a/index.html
+++ b/index.html
@@ -1,113 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ansh Bro Notes</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f5f5;
-      color: #333;
-    }
-    header {
-      background: #4CAF50;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-    }
-    h1 {
-      margin: 0;
-    }
-    main {
-      padding: 20px;
-    }
-    .note-link {
-      display: block;
-      background: #fff;
-      margin: 10px 0;
-      padding: 15px;
-      text-decoration: none;
-      color: #4CAF50;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    .note-link:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ansh Bro Notes - Class 9 Science</title>
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<style>
+/* Reset and Body */
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Roboto',sans-serif;}
+body{background:#f5f5f8;color:#333;line-height:1.6;}
+a{text-decoration:none;color:inherit;transition:0.3s;}
+
+/* Header */
+header{background:linear-gradient(90deg,#1E3A8A,#DC2626);color:#fff;text-align:center;padding:40px 20px;}
+header h1{font-size:2.5rem;font-weight:700;}
+header p{font-size:1.2rem;margin-top:10px;opacity:0.9;}
+
+/* Container */
+.container{max-width:1100px;margin:40px auto;padding:0 20px;}
+
+/* Section Title */
+.section-title{font-size:1.8rem;color:#1E3A8A;margin-bottom:25px;text-align:center;}
+
+/* Cards Layout */
+.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:25px;}
+.card{background:#fff;padding:25px;border-radius:15px;box-shadow:0 8px 20px rgba(0,0,0,0.1);transition:0.3s;position:relative;overflow:hidden;}
+.card:hover{transform:translateY(-5px);box-shadow:0 12px 25px rgba(0,0,0,0.15);}
+.card h3{font-size:1.3rem;margin-bottom:15px;color:#DC2626;}
+.card p{margin-bottom:20px;font-size:0.95rem;opacity:0.85;}
+
+/* Buttons */
+.btn{display:inline-block;padding:12px 25px;border-radius:50px;font-weight:500;background:#1E3A8A;color:#fff;border:none;cursor:pointer;margin-right:10px;transition:0.3s;}
+.btn:hover{background:#DC2626;transform:scale(1.05);}
+
+/* Upload Form */
+form{background:#fff;padding:25px;border-radius:15px;box-shadow:0 8px 20px rgba(0,0,0,0.1);max-width:500px;margin:30px auto;}
+form h3{margin-bottom:15px;color:#1E3A8A;}
+form input, form textarea{width:100%;padding:12px;margin-bottom:15px;border:1px solid #ccc;border-radius:8px;outline:none;transition:0.3s;}
+form input:focus, form textarea:focus{border-color:#DC2626;box-shadow:0 0 5px rgba(220,38,38,0.5);}
+form button{width:100%;}
+
+/* Table for uploaded notes (placeholder) */
+.table-wrapper{overflow-x:auto;margin-top:20px;}
+table{width:100%;border-collapse:collapse;}
+table th, table td{padding:12px 15px;text-align:left;}
+table th{background:#1E3A8A;color:#fff;font-weight:500;}
+table tr:nth-child(even){background:#f5f5f5;}
+table tr:hover{background:#e8e8ff;}
+
+/* Footer */
+footer{background:#1E3A8A;color:#fff;text-align:center;padding:25px;margin-top:50px;border-top:4px solid #DC2626;}
+footer p{opacity:0.9;font-size:0.9rem;}
+
+/* Responsive */
+@media(max-width:768px){.cards{grid-template-columns:1fr;}}
+</style>
 </head>
 <body>
-  <header>
-    <h1>Ansh Bro Notes</h1>
-    <p>Class 9 Science Notes</p>
-  </header>
-  <main>
-    <h2>Download Notes</h2>
-    <a href="notes/physics.pdf" class="note-link">Physics Notes</a>
-    <a href="notes/chemistry.pdf" class="note-link">Chemistry Notes</a>
-    <a href="notes/biology.pdf" class="note-link">Biology Notes</a>
-  </main>
+
+<!-- Header -->
+<header>
+<h1>Ansh Bro Notes</h1>
+<p>Class 9 Science - Physics | Chemistry | Biology</p>
+</header>
+
+<!-- Container -->
+<div class="container">
+
+<!-- Physics Section -->
+<section id="physics">
+<h2 class="section-title">Physics Notes</h2>
+<div class="cards">
+<div class="card">
+<h3>Mechanics Notes</h3>
+<p>Learn the fundamentals of motion, force, energy, and more.</p>
+<a href="notes/physics1.pdf" class="btn" target="_blank">View</a>
+<a href="notes/physics1.pdf" class="btn" download>Download</a>
+</div>
+<div class="card">
+<h3>Optics Notes</h3>
+<p>Understand light, reflection, refraction, and lenses easily.</p>
+<a href="notes/physics2.pdf" class="btn" target="_blank">View</a>
+<a href="notes/physics2.pdf" class="btn" download>Download</a>
+</div>
+<div class="card">
+<h3>Electricity Notes</h3>
+<p>Explore circuits, voltage, current, and electrical concepts.</p>
+<a href="notes/physics3.pdf" class="btn" target="_blank">View</a>
+<a href="notes/physics3.pdf" class="btn" download>Download</a>
+</div>
+</div>
+</section>
+
+<!-- Chemistry Section -->
+<section id="chemistry" style="margin-top:50px;">
+<h2 class="section-title">Chemistry Notes</h2>
+<div class="cards">
+<div class="card">
+<h3>Atoms & Molecules</h3>
+<p>Learn atomic structure, bonding, and reactions.</p>
+<a href="notes/chemistry1.pdf" class="btn" target="_blank">View</a>
+<a href="notes/chemistry1.pdf" class="btn" download>Download</a>
+</div>
+<div class="card">
+<h3>Periodic Table</h3>
+<p>Understand elements, groups, periods, and properties.</p>
+<a href="notes/chemistry2.pdf" class="btn" target="_blank">View</a>
+<a href="notes/chemistry2.pdf" class="btn" download>Download</a>
+</div>
+<div class="card">
+<h3>Acids & Bases</h3>
+<p>Explore pH, reactions, and important concepts.</p>
+<a href="notes/chemistry3.pdf" class="btn" target="_blank">View</a>
+<a href="notes/chemistry3.pdf" class="btn" download>Download</a>
+</div>
+</div>
+</section>
+
+<!-- Biology Section -->
+<section id="biology" style="margin-top:50px;">
+<h2 class="section-title">Biology Notes</h2>
+<div class="cards">
+<div class="card">
+<h3>Cell Structure</h3>
+<p>Understand cell organelles, functions, and diagrams.</p>
+<a href="notes/biology1.pdf" class="btn" target="_blank">View</a>
+<a href="notes/biology1.pdf" class="btn" download>Download</a>
+</div>
+<div class="card">
+<h3>Human Body</h3>
+<p>Explore organs, systems, and processes.</p>
+<a href="notes/biology2.pdf" class="btn" target="_blank">View</a>
+<a href="notes/biology2.pdf" class="btn" download>Download</a>
+</div>
+<div class="card">
+<h3>Plant Kingdom</h3>
+<p>Learn about plants, photosynthesis, and growth patterns.</p>
+<a href="notes/biology3.pdf" class="btn" target="_blank">View</a>
+<a href="notes/biology3.pdf" class="btn" download>Download</a>
+</div>
+</div>
+</section>
+
+<!-- Upload Form -->
+<section id="upload" style="margin-top:50px;">
+<h2 class="section-title">Upload Your Notes</h2>
+<form id="uploadForm">
+<h3>Send Your Hand-written Notes</h3>
+<input type="text" name="name" placeholder="Your Name" required>
+<input type="email" name="email" placeholder="Your Email" required>
+<input type="text" name="subject" placeholder="Subject (Physics/Chemistry/Biology)" required>
+<input type="file" name="file" accept=".pdf,.doc,.docx" required>
+<textarea name="message" placeholder="Message (optional)" rows="3"></textarea>
+<button type="submit" class="btn">Upload Note</button>
+</form>
+
+<!-- Uploaded Notes Placeholder Table -->
+<div class="table-wrapper">
+<table>
+<thead>
+<tr><th>Student Name</th><th>Subject</th><th>File</th><th>Action</th></tr>
+</thead>
+<tbody id="uploadedNotes">
+<!-- JS will dynamically add rows here -->
+</tbody>
+</table>
+</div>
+</section>
+
+</div>
+
+<!-- Footer -->
+<footer>
+<p>&copy; 2026 Ansh Bro Notes. All rights reserved.</p>
+</footer>
+
+<!-- JS -->
+<script>
+// Smooth scrolling for anchor links
+document.querySelectorAll('a[href^="#"]').forEach(anchor=>{
+anchor.addEventListener('click',function(e){
+e.preventDefault();
+document.querySelector(this.getAttribute('href')).scrollIntoView({behavior:'smooth'});
+});
+});
+
+// Upload form handling (placeholder, since GitHub Pages is static)
+const uploadForm = document.getElementById('uploadForm');
+const uploadedNotes = document.getElementById('uploadedNotes');
+
+uploadForm.addEventListener('submit',function(e){
+e.preventDefault();
+const formData = new FormData(uploadForm);
+const name = formData.get('name');
+const subject = formData.get('subject');
+const file = formData.get('file').name;
+
+// Add to table
+const row = document.createElement('tr');
+row.innerHTML = `<td>${name}</td><td>${subject}</td><td>${file}</td><td><a href="#" class="btn" onclick="alert('Download not supported in demo')">Download</a></td>`;
+uploadedNotes.appendChild(row);
+
+// Reset form
+uploadForm.reset();
+alert('Your note has been submitted successfully! (Placeholder)');
+});
+</script>
+
 </body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ansh Bro Notes</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f5f5;
-      color: #333;
-    }
-    header {
-      background: #4CAF50;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-    }
-    h1 {
-      margin: 0;
-    }
-    main {
-      padding: 20px;
-    }
-    .note-link {
-      display: block;
-      background: #fff;
-      margin: 10px 0;
-      padding: 15px;
-      text-decoration: none;
-      color: #4CAF50;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    .note-link:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Ansh Bro Notes</h1>
-    <p>Class 9 Science Notes</p>
-  </header>
-  <main>
-    <h2>Download Notes</h2>
-    <a href="notes/physics.pdf" class="note-link">Physics Notes</a>
-    <a href="notes/chemistry.pdf" class="note-link">Chemistry Notes</a>
-    <a href="notes/biology.pdf" class="note-link">Biology Notes</a>
-  </main>
-</body>
-</html>
+                                                                     </html>
